Fix invisible window bug on github

--- a/style.css
+++ b/style.css
@@ -432,6 +432,6 @@ body {
 }
 
 .none {
-  display: flex;
+  display: none;
   position: fixed;
 }
